removed padding-top to avoid parent element being not centered

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -266,9 +266,6 @@ $page-nav-margin: 40px;
         }
       }
     }
-    > ul {
-      padding-top: 8px;
-    }
   }
   li[data-type='dir'] {
     > .nav-title {
